[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = ""
authors = ["Shreya <shettyshreyaj24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "<2.2"
requests = "<2.31"
python-dotenv = "<1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
